logs/ros-prerelease.log
Listing '.'...
Listing './bin'...
Compiling './bin/ros-prerelease.py'...
***   File "./bin/ros-prerelease.py", line 199
    print 'Please provide your email address: --email you@willowgarage.com'
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ros_prerelease_hudson.py'...
***   File "./bin/ros_prerelease_hudson.py", line 145
    print k, v
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ros_prerelease_jobs_common.py'...
***   File "./bin/ros_prerelease_jobs_common.py", line 36
    print 'Unsupported branch type %s for stack %s'%(branch, stack.name)
                                                  ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ros_prerelease-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
